154. Tailwind CLI Build Process Magic Script Command done

--- a/day-11/Lec-2/src/index.html
+++ b/day-11/Lec-2/src/index.html
@@ -15,5 +15,9 @@
     </h1>
 
     <h2 class="text-pink-600 bg-amber-500 font-bold p-10">Hello Developers</h2>
+
+    <h3 class="text-white">
+      154. Tailwind CLI Build Process Magic Script Command
+    </h3>
   </body>
 </html>
