--- a/day-11/Lec-3_tailwind_basic_syntax/index.html
+++ b/day-11/Lec-3_tailwind_basic_syntax/index.html
@@ -17,16 +17,18 @@
   </head>
   <body>
     <div>
-      <h1 class="bg-blue-500">155. Tailwind CSS Syntax Overview</h1>
+      <h1 class="bg-blue-500/90 text-white text-center p-5">
+        155. Tailwind CSS Syntax Overview
+      </h1>
     </div>
 
-    <p class="bg-red-300 p-5 text-center">
+    <p class="bg-red-300 p-[20px] text-center">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolore
       omnis porro laboriosam magnam, adipisci voluptatum repellendus unde earum
       sapiente!
     </p>
 
-    <p>
+    <p class="bg-orange-500 p-5 text-center">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur
       laudantium quasi mollitia adipisci nisi deserunt architecto soluta, culpa
       necessitatibus a ducimus doloribus exercitationem eveniet beatae sapiente
@@ -34,6 +36,18 @@
       Qui dolore veniam autem vitae nostrum inventore sequi, fugit, perspiciatis
       sunt, porro facere! Id, rem!
     </p>
+
+    <!-- make btn -->
+
+    <button
+      class="bg-green-600 m-5 px-3 py-2 text-white font-bold hover:bg-green-800 rounded-md"
+    >
+      Click Me
+    </button>
+
+    <div class="text-xl sm:text-green-400 md:text-red-700 md:text-5xl">
+      Responsive text example
+    </div>
   </body>
 </html>
 
