157. Tailwind’s Color Palette and Customizing Colors done

--- a/day-11/Lec-4-TextBackgroundBorderColors/index.html
+++ b/day-11/Lec-4-TextBackgroundBorderColors/index.html
@@ -14,6 +14,11 @@
     <style type="text/tailwindcss">
       @theme {
         --color-clifford: #da373d;
+        --color-primary: #1da1f2;
+        --color-secondary: #ffffff;
+        /* color: {
+          primary: "#1DA1F2";
+        } */
       }
     </style>
   </head>
@@ -25,5 +30,16 @@
     <div class="text-red-500 text-center border-2 border-blue-600 m-5">
       this is a colorful box
     </div>
+
+    <h2 class="text-secondary bg-primary">
+      157. Tailwind’s Color Palette and Customizing Colors
+    </h2>
+    <button
+      class="bg-sky-500 text-white px-3 py-2 hover:bg-sky-700 rounded-lg m-5 font-bold"
+    >
+      Click Me
+    </button>
+
+    <h3>158. Font sizing with text-{size} utilities</h3>
   </body>
 </html>
