158. Font sizing with text-{size} utilitiesdone

--- a/day-11/Lec-4-TextBackgroundBorderColors/index.html
+++ b/day-11/Lec-4-TextBackgroundBorderColors/index.html
@@ -41,5 +41,9 @@
     </button>
 
     <h3>158. Font sizing with text-{size} utilities</h3>
+
+    <div class="text-sm">Small Text</div>
+    <div class="text-xl">Large Text</div>
+    <div class="text-2xl font-bold">Extra Large & Bold Text</div>
   </body>
 </html>
