160. Aligning and transforming text using text-left, text-right,       uppercase, etc done

--- a/day-12/Font Weight_Line Height/index.html
+++ b/day-12/Font Weight_Line Height/index.html
@@ -42,5 +42,22 @@
       mollitia modi ipsa repellat veniam, aperiam magni officia! Cupiditate
       placeat ex aut alias, tenetur reiciendis.
     </p>
+
+    <h2 class="text-right uppercase bg-red-400">
+      160. Aligning and transforming text using text-left, text-right,
+      uppercase, etc
+    </h2>
+
+    <div class="w-80 bg-green-400 m-5 p-5">
+      <p class="text-justify capitalize">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita rerum
+        harum maxime ducimus suscipit dicta esse nihil, eveniet corrupti
+        quibusdam! Explicabo incidunt dolore amet facilis cupiditate, sit ad
+        asperiores, eum modi sint illum culpa dicta. Blanditiis commodi
+        perspiciatis rem cupiditate fuga, ea possimus consequuntur sequi
+        provident tempore eum maxime mollitia quas error perferendis saepe
+        asperiores voluptas ipsa neque aut. Commodi.
+      </p>
+    </div>
   </body>
 </html>
