--- a/day-12/Font Weight_Line Height/index.html
+++ b/day-12/Font Weight_Line Height/index.html
@@ -59,5 +59,25 @@
         asperiores voluptas ipsa neque aut. Commodi.
       </p>
     </div>
+
+    <h2 class="bg-sky-500">161. Spacing Utilities (Margin and Padding)</h2>
+
+    <div class="bg-gray-300 border-2 border-solid border-green-400 p-5">
+      <h1 class="text-xl font-bold mb-4 border-2 border-solid border-red-400">
+        Tailwind Spacing Utilities (Margin and Padding)
+      </h1>
+      <div class="m-4 border-2 border-solid border-red-400">
+        box 1 with margin padding
+      </div>
+      <div>box 2 with responsive margin top</div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+        iste eaque nisi optio obcaecati, pariatur exercitationem voluptate illum
+        dicta maxime sunt. Nemo deserunt deleniti ipsam possimus eius voluptatum
+        fugiat, in quidem voluptas exercitationem sed architecto ipsum animi
+        similique tempore commodi explicabo nam corrupti error, rerum
+        consectetur praesentium. Voluptatum, quo impedit?
+      </p>
+    </div>
   </body>
 </html>
