162. Applying Borders, Rounded Corners, and Shadow

--- a/day-12/Font Weight_Line Height/index.html
+++ b/day-12/Font Weight_Line Height/index.html
@@ -79,5 +79,36 @@
         consectetur praesentium. Voluptatum, quo impedit?
       </p>
     </div>
+
+    <h1>162. Applying Borders, Rounded Corners, and Shadow</h1>
+
+    <div class="bg-green-200 p-4 m-4 border-3 border-indigo-500">
+      this is a box
+    </div>
+
+    <p class="border-l-4 border-red-700 m-6 pl-2">Hello developers</p>
+
+    <div
+      class="flex flex-col-reverse divide-y-4 divide-y-reverse divide-green-800"
+    >
+      <div>01</div>
+      <div>02</div>
+      <div>03</div>
+    </div>
+
+    <div class="flex gap-5">
+      <div class="bg-violet-500 w-20 p-5 rounded-full m-5"></div>
+      <div class="bg-violet-500 w-20 p-5 rounded-md m-5"></div>
+      <div class="bg-violet-500 w-20 p-5 rounded-lg m-5"></div>
+      <div class="bg-violet-500 w-20 p-5 rounded-t-3xl m-5"></div>
+    </div>
+
+    <div class="w-20 h-20 bg-indigo-500 m-5"></div>
+    <div class="w-20 h-20 bg-white-500 m-5 shadow-2xl rounded-lg"></div>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit
+      porro enim, perferendis atque doloremque nihil aspernatur culpa voluptatem
+      sapiente voluptates.
+    </p>
   </body>
 </html>
